<resources>
  <string name="app_name">Satis</string>

  <string name="card_add_header">Add card</string>
  <string name="card_add">Add</string>
  <string name="card_title_hint">Title…</string>
  <string name="card_message_hint">Message…</string>
  <string name="card_message_no_title">Please enter a title</string>

  <string name="theme_system">System theme</string>
  <string name="theme_light">Light theme</string>
  <string name="theme_dark">Dark theme</string>

  <string name="launch_adjacent_account">Launch adjacent account</string>

  <string name="account_id">Account: %1$s</string>
  <string name="version_info">Version: %1$d</string>
  <string name="build_time_info">Build time: %1$s</string>
  <string name="notification_token">Notification token: %1$s</string>
  <string name="trigger_workers">Trigger workers</string>
  <string name="log">Log</string>

  <string name="home">Home</string>
  <string name="images">Images</string>
  <string name="notifications">Notifications</string>
  <string name="account">Account</string>

  <string name="notification_channel_regular_priority">Regular notification channel"</string>
  <string name="notification_channel_high_priority">High priority notification channel"</string>

  <string name="delete">Delete</string>
</resources>
