<?xml version="1.0" encoding="utf-8"?>
<navigation
    android:id="@+id/navigation_graph"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/home"
>

    <fragment
        android:id="@+id/home"
        android:name="com.satis.app.feature.cards.CardFragment"
        android:label="@string/home"
    />

    <fragment
        android:id="@+id/images"
        android:name="com.satis.app.feature.images.ImagesFragment"
        android:label="@string/images"
    >
        <action
            android:id="@+id/action_images_to_image"
            app:destination="@id/image"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
        />

    </fragment>

    <fragment
        android:id="@+id/image"
        android:name="com.satis.app.feature.images.ImageFragment"
        android:label="{title}"
    >
        <argument
            android:name="photo"
            app:argType="com.satis.app.feature.images.PhotoState"
        />

        <argument
            android:name="title"
            app:argType="string"
        />

    </fragment>

    <fragment
        android:id="@+id/playground"
        android:name="com.satis.app.feature.playground.PlaygroundFragment"
    />

    <fragment
        android:id="@+id/account"
        android:name="com.satis.app.feature.account.AccountFragment"
        android:label="@string/account"
    />

</navigation>